# py-tsuro

./: README.md
py-tsuro/: Cargo.toml  pyproject.toml
py-tsuro/src/: board.rs  env.rs  lib.rs  pymethods.rs  tile.rs  view.rs
py-tsuro/src/board/: graph.rs  marker.rs
py-tsuro/src/board/marker/: edge_index_to_position.rs
