[package]
name = "py-tsuro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_tsuro"
crate-type = ["cdylib", "lib"]

[dependencies]
arrayvec = "0.7.6"
bincode = { version = "2.0.1", features = ["serde"]}
itertools = "0.14.0"
pyo3 = { version = "^0.24", features = ["multiple-pymethods"] }
pyo3-tch = "0.20.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
tch = "0.20.0"

[features]
extension-module = ["pyo3/extension-module"]
